2003-01-18  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/404.php: valid XHTML 1.0 Transitional.

	* www/sendmessage.php: ditto.

	* www/include/languages/Base.tab: valid XHTML 1.0 Transitional
	for sendmessage string.

	* www/people/editjob.php: Audit: escape special characters from
	user input before submitting to database.

	* common/frs/FRSPackage.class: ditto.

	* common/docman/DocumentGroup.class: ditto.

	* common/tracker/ArtifactType.class: ditto.

	* common/tracker/ArtifactGroup.class: ditto.

	* common/tracker/ArtifactCategory.class: ditto.

	* common/include/User.class: ditto.

	* common/include/Group.class: ditto.

	* common/frs/FRSRelease.class: ditto, plus re-fetch data on
	update.

	* www/project/admin/editrelease.php: ditto, plus fix bogus
	warning about "file upload attack".

2003-01-17  Reinhard Spisser   <reinhard@spisser.it>

	* www/forum/*: there were still a lot of unlocalized strings.
	Now there should be no more hardcoded strings. The forum
	localization should be now complete.

	* www/include/languages/Base.tab: Added labels for forums
	and general error messages

	* www/include/languages/Italian.tab: Added translations for italian

	* common/include/Error.class:	added new localized Error functions
	setPermissionDeniedError(),setInvalidEmailError(),setOnUpdateError(),
	setGroupIdError(). These functions can be used by all classes that
	subclass Error.class, and instead of setting
	$this->setError("Permission Denied"), they should call
	$this->setPermissionDeniedError()

	* common/forum/*:	localized Forum classes
	All hardcoded strings are replaced with calls to getText()

	* common/docman/*:	added calls to new localized Error functions

2003-01-17 Tom Copeland <tom@infoether.com>

	* www/scm/index.php, etc/local.inc: Added new sys_cvs_single_host system
	variable that gives all projects the same CVS hostname.  Set it up
	as being on - i.e., everyone gets the same hostname - by default.

2003-01-16  Roland Mas  <lolando@debian.org>
