@@ -11,7 +11,7 @@
   *
   */
 
-require_once('pre.php');    
+require_once('pre.php');
 require_once('common/include/timezones.php');
 
 session_require(array('isloggedin'=>'1'));
@@ -41,8 +41,8 @@ if ($submit) {
 	if ($language != $u->getLanguage()) {
 		$refresh = 1;
 	}
-	
-	if (!$u->update($realname, $language, $timezone, $mail_site, $mail_va, $use_ratings, 
+
+	if (!$u->update($realname, $language, $timezone, $mail_site, $mail_va, $use_ratings,
 		$jabber_address,$jabber_only)) {
 		$feedback .= $u->getErrorMessage().'<br />';
 	} else {
@@ -65,56 +65,57 @@ echo '<form action="'.$PHP_SELF.'" method="post">';
 
 echo $HTML->boxTop($Language->getText('account_options', 'title'));
 ?>
- 
 
-<p> <?php echo $Language->getText('account_options', 'welcome'); ?> <strong><?php print $u->getUnixName(); ?></strong>. 
+
+<p> <?php echo $Language->getText('account_options', 'welcome'); ?> <strong><?php print $u->getUnixName(); ?></strong>. </p>
 <p>
 
-<?php echo $Language->getText('account_options', 'intro'); ?> 
-
+<?php echo $Language->getText('account_options', 'intro'); ?>
+</p>
 <ul>
-<li><a href="/users/<?php print $u->getUnixName(); ?>/"><strong><?php echo $Language->getText('account_options', 'view_developer_profile'); ?></strong></a>
-<li><a href="/people/editprofile.php"><strong><?php echo $Language->getText('account_options', 'edit_skills_profile'); ?></strong></a>
-<li><a href="/themes/"><strong><?php echo $Language->getText('menu', 'change_my_theme'); ?></strong></a>
+<li><a href="/users/<?php print $u->getUnixName(); ?>/"><strong><?php echo $Language->getText('account_options', 'view_developer_profile'); ?></strong></a></li>
+<li><a href="/people/editprofile.php"><strong><?php echo $Language->getText('account_options', 'edit_skills_profile'); ?></strong></a></li>
+<li><a href="/themes/"><strong><?php echo $Language->getText('menu', 'change_my_theme'); ?></strong></a></li>
 </ul>
 <?php echo $HTML->boxBottom(); ?>
 
 &nbsp;<br />
-<table width=100% border=0>
+<table width="100%" border="0">
 
-<tr valign=top>
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'member_since'); ?> </td>
 <td><strong><?php print date($sys_datefmt,$u->getAddDate()); ?></strong></td>
 </tr>
-<tr valign=top>
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'user_id'); ?> </td>
 <td><strong><?php print $u->getID(); ?></strong></td>
 </tr>
 
-<tr valign=top>
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'login_name'); ?> </td>
 <td><strong><?php print $u->getUnixName(); ?></strong>
 <br /><a href="change_pw.php">[<?php echo $Language->getText('account_options', 'change_password'); ?>]</a></td>
 </tr>
 
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'real_name'); ?></td>
-<td><input type="text" name="realname" value="<?php print $u->getRealName(); ?>"></strong>
+<td><input type="text" name="realname" value="<?php print $u->getRealName(); ?>" />
 </td>
 </tr>
 
-<tr valign=top>
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'language'); ?> </td>
 <td><?php echo html_get_language_popup ($Language,'language',$u->getLanguage()); ?>
 </td>
 </tr>
 
-<tr valign=top>
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'timezone'); ?> </td>
 <td><?php echo html_get_timezone_popup('timezone', $u->getTimeZone()); ?>
 </td>
 </tr>
 
-<tr valign=top>
+<tr valign="top">
 <td><?php echo $Language->getText('account_options', 'email_address'); ?> </td>
 <td><strong><?php print $u->getEmail(); ?></strong>
 <br /><a href="change_email.php">[<?php echo $Language->getText('account_options', 'change_email_address'); ?>]</a>
@@ -123,11 +124,11 @@ echo $HTML->boxTop($Language->getText('account_options', 'title'));
 
 <?php
 if ($sys_use_jabber) {
-    echo '<tr valign=top>
+    echo '<tr valign="top">
 <td>'. $Language->getText('account_register','jabberaddr') .'</td>
 <td>
-    <input size=30 type="text" name="jabber_address" value="'. $u->getJabberAddress() .'"><p>
-	<input type="checkbox" name="jabber_only" value="1" '.(($u->getJabberOnly()) ? 'CHECKED' : '' ).'>
+    <input size=30 type="text" name="jabber_address" value="'. $u->getJabberAddress() .'" /><p />
+	<input type="checkbox" name="jabber_only" value="1" '.(($u->getJabberOnly()) ? 'checked="CHECKED"' : '' ).' />
 	'.$Language->getText('account_register','jabberonly').'.
 </td></tr>';
 
@@ -136,36 +137,34 @@ if ($sys_use_jabber) {
 
 
 <tr>
-<td colspan=2>
-<?php 
+<td colspan="2">
+<?php
 // ############################# Preferences
 echo $HTML->boxTop("Preferences"); ?>
 
-<input type="checkbox" name="mail_site" value="1"<?php 
-	if ($u->getMailingsPrefs('site')) print " checked"; ?>> 
+<input type="checkbox" name="mail_site" value="1"<?php
+	if ($u->getMailingsPrefs('site')) print " checked=\"checked\""; ?> />
 	<?php echo $Language->getText('account_register','siteupdate'); ?>
 
-<p><input type="checkbox"  name="mail_va" value="1"<?php
-	if ($u->getMailingsPrefs('va')) print " checked"; ?>> 
+<p /><input type="checkbox"  name="mail_va" value="1"<?php
+	if ($u->getMailingsPrefs('va')) print " checked=\"checked\""; ?> />
 	<?php echo $Language->getText('account_register','communitymail'); ?>
 
-<p><input type="checkbox"  name="remember_user" value="1"<?php
-	if ($sf_user_hash) print " checked"; ?> > 
+<p /><input type="checkbox"  name="remember_user" value="1"<?php
+	if ($sf_user_hash) print " checked=\"checked\""; ?> />
 <?php echo $Language->getText('account_register','remember_me','<a href="/my/">');?>
 
-<p><input type="checkbox"  name="use_ratings" value="1"<?php
-	if ($u->usesRatings()) print " checked"; ?> > 
+<p /><input type="checkbox"  name="use_ratings" value="1"<?php
+	if ($u->usesRatings()) print " checked=\"checked\""; ?> />
 	<?php echo $Language->getText('account_register','partecipate_peer_ratings','<a href="/users/'.$u->getUnixName().'">'); ?>
 
-</em>
 
-<P align=center>
-<?php echo $HTML->boxBottom(); 
+<?php echo $HTML->boxBottom();
 
 // ############################### Shell Account
 
 if ($u->getUnixStatus() == 'A') {
-	echo $HTML->boxTop("Shell Account Information"); 
+	echo $HTML->boxTop("Shell Account Information");
 	print '&nbsp;
 <br />Shell box: <strong>'.$u->getUnixBox().'</strong>
 <br />CVS/SSH Shared Authorized Keys: <strong>';
@@ -177,19 +176,18 @@ if ($u->getUnixStatus() == 'A') {
 		print '0';
 	}
 	print '</strong> <a href="editsshkeys.php">[Edit Keys]</a>';
-	echo $HTML->boxBottom(); 
-} 
+	echo $HTML->boxBottom();
+}
 ?>
-
 </td>
 </tr>
 
-</TABLE>
+</table>
 
-<CENTER>
-<input type="submit" name="submit" value="<?php echo $Language->getText('account_register','update'); ?>">
-<input type="reset" name="reset" value="<?php echo $Language->getText('account_register','reset'); ?>">
-</CENTER>
+<div align="center">
+<input type="submit" name="submit" value="<?php echo $Language->getText('account_register','update'); ?>" />
+<input type="reset" name="reset" value="<?php echo $Language->getText('account_register','reset'); ?>" />
+</div>
 </form>
 
 <?php
